--- a/Reproductor/app/src/main/res/layout/activity_main.xml
+++ b/Reproductor/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:hint="Texto de entrada"
-        android:minHeight="48dp" />
+        android:minHeight="48dp"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/boton"
@@ -25,6 +28,42 @@
         android:layout_centerHorizontal="true"
         android:onClick="recibeEntrada"
         android:text="Guardar" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/Layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imagen"
+            android:layout_width="296dp"
+            android:layout_height="274dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="407dp"
+            android:contentDescription="@string/app_name"
+            android:src="@android:drawable/ic_menu_report_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/play"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="151dp"
+            android:layout_marginTop="262dp"
+            android:layout_marginEnd="150dp"
+            android:layout_marginBottom="97dp"
+            android:background="@drawable/reproducir"
+            android:onClick="reproducePausa"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imagen" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </RelativeLayout>
